<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/linear_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_setting_list_select"
            android:clickable="true"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:alpha="0.87"
                android:text="@string/setting_scan"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/tvScan"
                android:alpha="0.54"
                android:text="@string/setting_scan_second"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_font_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/more_setting_right" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvMsgNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:alpha="0.87"
            android:background="@drawable/more_setting_list_select"
            android:drawableRight="@drawable/more_setting_right"
            android:padding="12dp"
            android:text="@string/setting_new_msg_notify"
            android:clickable="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/tvOnlineDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:alpha="0.87"
            android:background="@drawable/more_setting_list_select"
            android:drawableRight="@drawable/more_setting_right"
            android:padding="12dp"
            android:text="@string/setting_online_duration"
            android:clickable="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/tvWifiDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:alpha="0.87"
            android:background="@drawable/more_setting_list_select"
            android:drawableRight="@drawable/more_setting_right"
            android:padding="12dp"
            android:text="@string/setting_wifi_download"
            android:clickable="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/tvCleanCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:alpha="0.87"
            android:background="@drawable/more_setting_list_select"
            android:drawableRight="@drawable/more_setting_right"
            android:padding="12dp"
            android:text="@string/setting_clean_cache"
            android:clickable="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:alpha="0.87"
            android:background="@drawable/more_setting_list_select"
            android:drawableRight="@drawable/more_setting_right"
            android:padding="12dp"
            android:text="@string/setting_about"
            android:clickable="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

        <Button
            android:id="@+id/setting_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/logout_btn_background"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="退出登录"
            android:textColor="@color/login_text"
            android:textSize="@dimen/large_font_size" />

    </LinearLayout>


</ScrollView>