<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
<<<<<<< HEAD
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="horizontal">

    <GridView
        android:id="@id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="@dimen/shard_item_width"
        android:numColumns="4"
        android:listSelector="@android:color/transparent"
        android:verticalSpacing="8dp"
        android:horizontalSpacing="16dp"
        android:stretchMode="columnWidth">
=======
    android:gravity="left"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/do_homework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/round_side_bg_green"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp">

        <com.edusoho.kuozhi.v3.view.EduSohoIconView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_homework"
            android:textColor="@color/material_green"
            android:textSize="@dimen/xxxx_large_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/homework"
            android:textColor="@color/material_green" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/do_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/round_side_bg_green"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp">

        <com.edusoho.kuozhi.v3.view.EduSohoIconView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_exercise"
            android:textColor="@color/material_green"
            android:textSize="@dimen/xxxx_large_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/exercise"
            android:textColor="@color/material_green" />
    </LinearLayout>
>>>>>>> e868da0837065a244baeeff4ca0a1575a03b3a1d

    </GridView>

</LinearLayout>