<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bottom_edge_height"
        android:src="@drawable/login_line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tvWifiDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.87"
            android:padding="13dp"
            android:text="@string/setting_online_duration"
            android:clickable="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tvScan"
            android:alpha="0.54"
            android:text="@string/online_duration_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_font_size" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_edge_height"
        android:src="@drawable/login_line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.87"
            android:padding="13dp"
            android:text="@string/online_duration_start"
            android:clickable="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_edge_height"
        android:src="@drawable/login_line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/tvStartEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.87"
            android:padding="13dp"
            android:text="@string/online_duration_end"
            android:clickable="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_font_size" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_edge_height"
        android:src="@drawable/login_line_bg" />

</LinearLayout>
